Fix modal height overflow

--- a/src/components/Modal.module.scss
+++ b/src/components/Modal.module.scss
@@ -51,6 +51,8 @@
 .modal {
     width: auto;
     height: max-content;
+    max-height: 100vh;
+    overflow-y: auto;
     padding: 0.6rem 0.6rem;
     box-sizing: border-box;
     background-color: white;
